--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-cayman
 title: Expreta
+description: Here is a nice description!
 show_downloads: true
 github:
   zip_url: https://docs.google.com/presentation/d/e/2PACX-1vRC-a-bsmlxWfkGpyZBpOl25kwvbgsTmlXWSRe7h8BYUoPmcJIJuO-CMjvCV9IvDl9LYuEN3jRnEPBC/pub
