--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,5 @@ title: Expreta
 description: Here is a nice description!
 show_downloads: true
 github:
-  zip_url: https://docs.google.com/presentation/d/e/2PACX-1vRC-a-bsmlxWfkGpyZBpOl25kwvbgsTmlXWSRe7h8BYUoPmcJIJuO-CMjvCV9IvDl9LYuEN3jRnEPBC/pub
+  pitch_deck: https://docs.google.com/presentation/d/e/2PACX-1vRC-a-bsmlxWfkGpyZBpOl25kwvbgsTmlXWSRe7h8BYUoPmcJIJuO-CMjvCV9IvDl9LYuEN3jRnEPBC/pub
+  contact_us: https://docs.google.com/forms/d/e/1FAIpQLSds6VL5l3STbz9R5_ImmQWLnFkH-N4V1TF20FHCs8NCQwe8fQ/viewform?usp=sf_link
